fix collapsing dell'uniba-topbar

--- a/src/design/plone/theme/theme/sass/unibatheme.scss
+++ b/src/design/plone/theme/theme/sass/unibatheme.scss
@@ -55,7 +55,7 @@
                     display: inherit;
                 }
             }
-            &.in {
+            &.out.collapsed {
                 .glyphicon-chevron-down {
                     display: none !important;
                 }
